2012-12-09  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gperror.c, gpasm/lst.c, gpasm/directive.c:
    error message and listing enhancements
  * gpasm/testsuite/gpasm.mchip/asmfiles/hd642.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd642.lst,
    gpasm/testsuite/gpasm.mchip/hexfiles/hd642.hex,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd658.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd658.lst,
    gpasm/testsuite/gpasm.mchip/hexfiles/hd658.hex,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd662.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd662.lst,
    gpasm/testsuite/gpasm.mchip/hexfiles/hd662.hex,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd858.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd858.lst,
    gpasm/testsuite/gpasm.mchip/hexfiles/hd858.hex,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd870.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd870.lst,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd871.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd871.lst,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd872.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd872.lst,
    gpasm/testsuite/gpasm.mchip/asmfiles/list8.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/list8.lst,
    gpasm/testsuite/gpasm.mchip/asmfiles/list9.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/list9.lst:
    regression tests adapted for gpasm
  * libgputils/gpwritehex.c, libgputils/gpwritehex.h:
    fixed .hxl and .hxh file generation
  * gpasm/testsuite/test: test .hxl and .hxh files
  * gpasm/testsuite/gpasm.mchip/listfiles/list5.hxh,
    gpasm/testsuite/gpasm.mchip/listfiles/list5.hxl: added
  * configure.ac, configure, doc/gputils.lyx: version changed to 1.0.0

2012-12-08  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gperror.c, gpasm/lst.c,
    libgputils/gpmemory.c:
    error message and listing enhancements

2012-12-07  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/coff.c, gpasm/gperror.c, gpasm/parse.y, gpasm/lst.c,
    gpasm/directive.c: